--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,699 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.navigation-menu {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navigation-menu li {
+  margin: 0px 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navigation-menu li a {
+  text-decoration: none;
+  color: white;
+  transition: all 300ms;
+}
+.navigation-menu li a:hover {
+  color: red;
+  transition: all 300ms;
+}
+.mobile-navigation-menu {
+  list-style: none;
+}
+.mobile-navigation-menu li {
+  margin-top: 20px;
+}
+.active {
+  border-bottom: 1px solid red;
+}
+.mobile-navigation-menu li a {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: black;
+}
+.home {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.headerContainer {
+  width: auto;
+  margin-left: 30px;
+  margin-top: 140px;
+}
+.home .headerContainer h1 {
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 70px;
+  color: black;
+}
+.home .headerContainer p {
+  margin-top: 15px;
+  padding: 0;
+  font-size: 40px;
+  font-weight: lighter;
+  color: black;
+}
+.btn-shopping {
+  margin-left: 200px;
+}
+.home .headerContainer button {
+  margin-top: 20px;
+  border: none;
+  border-radius: 5px;
+
+  height: 50px;
+  width: 180px;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  background: black;
+}
+.priceSection {
+  display: flex;
+  justify-content: space-between;
+}
+.price_bold {
+  color: rgb(255, 15, 15);
+  font-weight: bold;
+  font-size: 18px;
+}
+.singleProduct {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.singleProductCard {
+  width: 700px;
+  height: 700px;
+}
+.singleProductCard img {
+  object-fit: cover !important;
+}
+.checkoutMain {
+  display: flex;
+  justify-content: space-around;
+}
+.address_side {
+  width: 600px;
+}
+
+/* ======================================= */
+/* Form Styles */
+form {
+  width: 100%;
+}
+
+input[type="text"],
+input[type="password"],
+select,
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+textarea {
+  border: 1px solid #ddd;
+  background-color: #fff;
+  color: #959595;
+  width: 100%;
+  padding: 10px;
+  font-size: 12px;
+  margin: 7px 0 25px 0;
+}
+
+label {
+  font-size: 14px;
+}
+
+select {
+  height: 37px;
+}
+
+input[type="checkbox"] {
+  margin: 5px 10px 5px 0px;
+}
+
+.user-pswd input[type="checkbox"] {
+  margin: 5px 10px 5px 15px;
+}
+
+input[type="checkbox"] + p,
+input[type="radio"] + p {
+  font-size: 15px;
+  padding: 0 5px;
+  display: inline;
+  color: #959595;
+}
+
+input[type="radio"] + p {
+  font-size: 13px;
+  padding: 0 0 0 20px;
+}
+
+input[type="submit"] {
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #000;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #d6544e;
+  border: none;
+}
+
+.coupon input[type="text"] {
+  width: 160px;
+}
+
+.coupon input[type="submit"] {
+  margin: 0 0 0 20px;
+}
+
+.order .redbutton {
+  background-color: #d6544e;
+  padding: 13px 30px;
+  font-size: 14px;
+  font-weight: 100;
+  margin-top: 25px;
+}
+
+.order .redbutton:hover {
+  background-color: #000;
+  border: none;
+}
+
+textarea {
+  height: 120px;
+}
+
+textarea:hover,
+input:hover {
+  border: 1px solid #d6544e;
+  background-color: #fff;
+}
+
+textarea:active,
+input:active {
+  border: 1px solid #d6544e;
+  background-color: #f5f5f5;
+}
+
+textarea:focus,
+input:focus {
+  border: 1px solid #000;
+  background-color: #f5f5f5;
+}
+
+label:not(.notes):after {
+  content: "*";
+  color: red;
+  padding-left: 5px;
+}
+
+.notes {
+  display: block;
+  padding-top: 20px;
+}
+
+/* Grid Styles */
+* {
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.col {
+  margin-right: 16px;
+  float: left;
+}
+
+.col:last-child {
+  margin-right: 0;
+}
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  width: 100%;
+}
+
+.col-push-1,
+.col-push-2,
+.col-push-3,
+.col-push-4,
+.col-push-5,
+.col-push-6,
+.col-push-7,
+.col-push-8,
+.col-push-9,
+.col-push-10,
+.col-push-11 {
+  margin-left: 0;
+}
+
+/* TABLET STARTS HERE */
+
+@media (min-width: 768px) {
+  .wrapper {
+    width: 768px;
+  }
+
+  .col-1,
+  .col-2,
+  .col-3,
+  .col-4,
+  .col-5,
+  .col-6,
+  .col-7,
+  .col-8,
+  .col-9,
+  .col-10,
+  .col-11 {
+    width: 376px;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
+
+  .col-push-1,
+  .col-push-2,
+  .col-push-3,
+  .col-push-4,
+  .col-push-5,
+  .col-push-6,
+  .col-push-7,
+  .col-push-8,
+  .col-push-9,
+  .col-push-10,
+  .col-push-11 {
+    margin-left: 392px;
+  }
+
+  .col:nth-child(2n + 2) {
+    margin-right: 0;
+  }
+}
+
+/*DESKTOP STARTS HERE*/
+
+@media (min-width: 1136px) {
+  .wrapper {
+    width: 1136px;
+  }
+
+  .col-1 {
+    width: 80px;
+  }
+
+  .col-2 {
+    width: 176px;
+  }
+
+  .col-3 {
+    width: 272px;
+  }
+
+  .col-4 {
+    width: 368px;
+  }
+
+  .col-5 {
+    width: 464px;
+  }
+
+  .col-6 {
+    width: 560px;
+  }
+
+  .col-7 {
+    width: 656px;
+  }
+
+  .col-8 {
+    width: 752px;
+  }
+
+  .col-9 {
+    width: 848px;
+  }
+
+  .col-10 {
+    width: 944px;
+  }
+
+  .col-11 {
+    width: 1040px;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
+  .col-push-1 {
+    margin-left: 96px;
+  }
+  .col-push-2 {
+    margin-left: 192px;
+  }
+  .col-push-3 {
+    margin-left: 288px;
+  }
+  .col-push-4 {
+    margin-left: 384px;
+  }
+  .col-push-5 {
+    margin-left: 480px;
+  }
+  .col-push-6 {
+    margin-left: 576px;
+  }
+  .col-push-7 {
+    margin-left: 672px;
+  }
+  .col-push-8 {
+    margin-left: 768px;
+  }
+  .col-push-9 {
+    margin-left: 864px;
+  }
+  .col-push-10 {
+    margin-left: 960px;
+  }
+  .col-push-11 {
+    margin-left: 1056px;
+  }
+
+  .col:nth-child(2n + 2) {
+    margin-right: 16px;
+  }
+
+  .col:last-child {
+    margin-right: 0;
+  }
+}
+
+/* Main CSS Starts Here */
+body {
+  font-family: "Raleway", sans-serif;
+  color: #959595;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 20px 0;
+  color: #000;
+}
+
+h1 {
+  font-size: 72px;
+  color: #000;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+h4 {
+  font-size: 15px;
+}
+
+h5 {
+  font-size: 14px;
+}
+
+h6 {
+  font-size: 13px;
+}
+
+p {
+  font-size: 13px;
+  padding: 20px 0;
+}
+
+/* Heading Top Border Styles Start Here */
+h3 {
+  position: relative;
+}
+
+h3.topborder {
+  margin-top: 0;
+}
+
+h3.topborder:before {
+  content: "";
+  display: block;
+  border-top: 1px solid #c2c2c2;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+}
+
+h3.topborder span {
+  background: #fff;
+  padding: 0 10px 0 0;
+  position: relative;
+  z-index: 5;
+}
+/* Heading Top Border Styles End Here */
+
+header {
+  height: 250px;
+  background-image: url("http://lorempixel.com/1920/500");
+  background-size: cover;
+  text-align: center;
+  line-height: 210px;
+}
+
+.white-space {
+  height: 90px;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0px 12px 14px -10px #dddddd;
+  -webkit-box-shadow: 0px 12px 14px -10px #dddddd;
+  -moz-box-shadow: 0px 12px 14px -10px #dddddd;
+  -o-box-shadow: 0px 12px 14px -10px #dddddd;
+}
+
+.fa-info {
+  font-size: 24px;
+  padding: 0 20px;
+  color: #757575;
+  line-height: 56px;
+  vertical-align: middle;
+}
+
+a {
+  color: #d6544e;
+  font-size: 13px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+}
+
+.info-bar {
+  height: 56px;
+  background-color: #f5f5f5;
+  margin: 20px 0;
+}
+
+.info-bar p:first-child {
+  padding: 0;
+}
+
+.order {
+  border: 12px solid #f5f5f5;
+  padding: 30px;
+  margin-top: 28px;
+}
+
+.order div:not(.qty) {
+  width: 100%;
+  border-bottom: 1px solid #dddddd;
+  padding: 20px 0;
+}
+
+.order a {
+  display: block;
+}
+
+.order p {
+  padding: 0;
+  line-height: 20px;
+}
+
+.order h4,
+h5 {
+  padding: 0;
+}
+
+.order div:nth-child(6) {
+  border: none;
+}
+
+.width50 {
+  width: 50%;
+  float: left;
+}
+
+.padleft {
+  margin-left: 39px;
+}
+
+.padright {
+  padding-right: 40px;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.alignright {
+  float: right;
+}
+
+.prod-description {
+  text-transform: uppercase;
+  color: #000;
+}
+
+.qty {
+  font-weight: 900;
+  font-size: 13px;
+  color: #000;
+  padding-left: 4px;
+}
+
+.smalltxt {
+  font-size: 9px;
+  vertical-align: middle;
+}
+
+.paymenttypes {
+  border: 1px solid #dddddd;
+  width: 135px;
+  padding: 0 8px;
+  margin: 0 0 20px 10px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.paypal {
+  width: 39px;
+  height: 13px;
+}
+
+.cards {
+  width: 135px;
+  height: 24px;
+}
+
+.difwidth {
+  width: 150px;
+  line-height: 20px;
+}
+
+.order .center {
+  line-height: 40px;
+  color: #000;
+}
+.paymentForm_btn {
+  background-color: #d6544e;
+  padding: 13px 30px;
+  font-size: 14px;
+  font-weight: 100;
+  margin-top: 25px;
+  color: whitesmoke;
+}
+
+/* mobile view */
+
+@media only screen and (max-width: 600px) {
+  .home {
+    justify-content: center;
+    align-items: center;
+  }
+  .headerContainer {
+    margin-left: 0;
+    border-radius: 10px;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: black;
+    color: wheat;
+  }
+  .home .headerContainer h1 {
+    margin: 15px 0px;
+    height: 30px;
+    font-size: 40px;
+    color: white;
+  }
+  .home .headerContainer p {
+    font-size: 20px;
+
+    color: white;
+  }
+  .home .headerContainer button {
+    color: black;
+    background-color: white;
+    margin-bottom: 30px;
+  }
 }
